@@ -609,42 +609,10 @@ public:
     //// ID translation scheme /////
 
     /*!
-     * \brief Adds a catalog of translations. If the catalog is already installed,
-     * it doesn't do anything.
-     * \deprecated This method is deprecated since 0.18.
-     * It was used to load translations for
-     * trid() which has already been removed from libdui (qtTrId() is used instead
-     * of trid() now). Translations for qtTrId() are added with installTrCatalog().
-     * Therefore, installCategoryCatalog() has become useless
-     *
-     * \param category Category to load the catalog for
-     * \param name abstract name for the catalog. Concrete file is searched based on this.
-     */
-    void Q_DECL_DEPRECATED installCategoryCatalog(Category category, const QString &name);
-
-    /*!
-     * \brief removes a translation catalog
-     * \deprecated This method is deprecated since 0.18
-     * It was needed to remove translation catalogs loaded for trid().
-     * trid() has been removed already from libdui, therefore this
-     * method has become useless.
-     */
-    void Q_DECL_DEPRECATED removeCategoryCatalog(Category category, const QString &name);
-
-    /*!
      * \brief Copies translations from another DuiLocale
      * the catalogs are reloaded based on the locale settings
      */
     void copyCatalogsFrom(const DuiLocale &other);
-
-    /*!
-     * \brief Searches the installed catalogs by name and returns true if found
-     * \deprecated This method is deprecated since 0.18
-     * It was needed to check whether translation catalogs were loaded for trid().
-     * trid() has been removed already from libdui, therefore this
-     * method has become useless.
-     */
-    bool Q_DECL_DEPRECATED hasCategoryCatalog(Category category, const QString &name);
 
     /*!
      * \brief installs a translation catalog
@@ -736,26 +704,6 @@ Q_SIGNALS:
     void localeSettingsChanged();
 
 protected:
-    /*!
-     * \brief loads the QTranslators for all current catalogs
-     * \deprecated since 0.19.4-2
-     * This will move into the private class!
-     */
-    void Q_DECL_DEPRECATED loadTrCatalogs();
-
-    /*!
-     * \brief Installs the translations into QCoreApplication
-     * \deprecated since 0.19.4-2
-     * This will move into the private class!
-     */
-    void Q_DECL_DEPRECATED insertTrToQCoreApp();
-
-    /*!
-     * \brief Removes the translations from QCoreApplication
-     * \deprecated since 0.19.4-2
-     * This should move into the private class!
-     */
-    void Q_DECL_DEPRECATED removeTrFromQCoreApp();
 
     /*!
      * \brief Returns the default locale object.
